# pico-bare-metal

./: .gitignore  CMakeLists.txt  LICENSE  build.sh
docs/: dev-setup.md
examples/timer/: .clangd  CMakeLists.txt  build.sh  main.c
lib/: CMakeLists.txt
lib/include/emblib/: config.h  cs.h  error.h  gpio.h  io_bank.h  mem.h  nvic.h  pad.h  reg.h  ring.h  sio.h  timer.h
lib/src/: cs_host.c  cs_pico.c  gpio.c  io_bank.c  mem.c  nvic.c  pad.c  ring.c  sio.c  timer.c
scripts/: attach.sh  flash.sh  serial.sh
test/: CMakeLists.txt  main.c  test_mem.c  test_ring.c
test/host/: main.c  test_ring.c
test/host/include/: test_mem.h  test_ring.h
